fix scrolling, flickering, and update error using chunk

--- a/src/lwc/rd2EntryForm/rd2EntryForm.css
+++ b/src/lwc/rd2EntryForm/rd2EntryForm.css
@@ -14,10 +14,10 @@
 }
 
 .slds-modal__content {
-    height: auto;
-    max-height: 60vh;
+    height:auto !important;
+    max-height:calc(65vh) !important;
 }
 
 .slds-modal {
-    height:auto;
+    height: auto;
 }
